--- a/css/_base.scss
+++ b/css/_base.scss
@@ -20,3 +20,10 @@ img {
   height:auto;
   display:block;
 }
+
+a {
+  color: $color-text-1;
+  text-decoration: none;
+
+  &:hover { opacity: .7; }
+}
