--- a/css/index.scss
+++ b/css/index.scss
@@ -26,6 +26,8 @@
 @import 'components/ui/button';
 @import 'components/ui/icon';
 @import 'components/ui/modal';
+@import 'components/ui/panel-item';
+@import 'components/ui/panel-list';
 @import 'components/ui/sidebar';
 @import 'components/ui/spinner';
 @import 'components/ui/title';
