--- a/css/components/ui/_panel-item.scss
+++ b/css/components/ui/_panel-item.scss
@@ -2,6 +2,11 @@
 .c-panel-item {
   width: 100%;
 
+  &.-link {
+    width: 100%;
+    height: 100%;
+  }
+
   .type-detail {
     width: 100%;
     display: flex;
