Handle selects & store selected filters

--- a/css/components/ui/_select.scss
+++ b/css/components/ui/_select.scss
@@ -50,7 +50,7 @@
     }
 
     .Select-placeholder {
-      color: rgba($color-white, .3);
+      color: rgba($color-black, .3);
       text-transform: uppercase;
       font-family: $font-family-proximanova;
       padding-left: 0;
