--- a/css/index.scss
+++ b/css/index.scss
@@ -24,6 +24,7 @@
 // - ui
 @import '../node_modules/react-select/dist/react-select';
 @import 'components/ui/button';
+@import 'components/ui/filters';
 @import 'components/ui/icon';
 @import 'components/ui/modal';
 @import 'components/ui/panel-item';
