Include map in indicator page

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -5,6 +5,10 @@
   padding: 0 20px;
 }
 
+// GRID
+.l-row {
+  @include flex-grid-row(nest, expand, null, false, $grid-column-gutter);
+}
 
 .l-page {
   display: flex;
