--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -16,6 +16,7 @@
     padding: 0;
 
     .legend-content {
+      display: none;
       height: 0;
       padding: 0;
       visibility: hidden;
@@ -38,15 +39,18 @@
     flex-flow: column;
     height: 100%;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0 0 10px;
     transition: all .2s ease-out;
     overflow-y: auto;
 
     .legend-item {
-      margin-bottom: 10px;
-      background: lightblue;
+      padding: 10px;
+      border-bottom: 1px solid rgba($color-black, .2);
 
-      &:last-child { margin-bottom: 0; }
+      &:last-child {
+        padding-bottom: 0;
+        border-bottom: 0;
+      }
 
       &.-choropleth,
       &.-gradient {
@@ -67,11 +71,19 @@
         }
       }
 
-      .name-container {
+      .item-header {
+        display: flex;
+        justify-content: space-between;
         margin-bottom: 5px;
 
         .btn-show {
           margin-right: 8px;
+        }
+      }
+
+      .item-tools {
+        .handler {
+          cursor: move;
         }
       }
 
