--- a/css/index.scss
+++ b/css/index.scss
@@ -28,6 +28,7 @@
 
 // - ui
 @import '../node_modules/react-select/dist/react-select';
+@import 'components/ui/accordion';
 @import 'components/ui/button';
 @import 'components/ui/filters';
 @import 'components/ui/icon';
