--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -1,11 +1,8 @@
 
 .c-legend {
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
   display: flex;
   flex-flow: column;
-  width: 400px;
+  width: 100%;
   height: 250px;
   background-color: $color-white;
   padding-bottom: 15px;
