--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-flow: column;
   width: 100%;
-  height: 165px;
+  max-height: 165px;
   background-color: $color-white;
   padding-bottom: 15px;
   z-index: 1001;
