--- a/css/components/ui/_accordion.scss
+++ b/css/components/ui/_accordion.scss
@@ -6,17 +6,52 @@
   justify-content: flex-end;
 
   .accordion-section {
-    display: flex;
-    justify-content: flex-end;
+    &.-top,
+    &.-bottom {
+      span {
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
+
+    .item-enter {
+      transform: translate(100%);
+    }
+    .item-enter.item-enter-active {
+      transform: translate(0%);
+      transition: transform 500ms ease-in-out;
+    }
+    .item-leave {
+      transform: translate(-100%);
+      transition: transform 300ms ease-in-out;
+    }
+    .item-leave.item-leave-active {
+      transform: translate(100%);
+      transition: transform 300ms ease-in-out;
+    }
   }
 
   .accordion-item {
     flex-grow: 1;
     transition: all .3s ease;
 
+
     &.-hidden {
       width: 30px;
       flex-grow: 0;
+
+      * {
+        visibility: hidden;
+      }
+
+      & .btn-toggle,
+      & .c-map {
+        visibility: visible;
+
+        & * {
+          visibility: visible;
+        }
+      }
     }
   }
 }
