Add indicator from list

--- a/css/index.scss
+++ b/css/index.scss
@@ -31,6 +31,7 @@
 
 // - ui
 @import '../node_modules/react-select/dist/react-select';
+@import '../node_modules/react-toggle-switch/dist/css/switch.min';
 @import 'components/ui/accordion';
 @import 'components/ui/button';
 @import 'components/ui/collapsible-list';
@@ -41,5 +42,6 @@
 @import 'components/ui/panel-list';
 @import 'components/ui/sidebar';
 @import 'components/ui/spinner';
+@import 'components/ui/switch';
 @import 'components/ui/title';
 @import 'components/ui/select';
