--- a/css/components/ui/_accordion.scss
+++ b/css/components/ui/_accordion.scss
@@ -6,8 +6,7 @@
   justify-content: flex-end;
 
   .accordion-section {
-    &.-top,
-    &.-bottom {
+    &.-dynamic{
       span {
         display: flex;
         justify-content: flex-end;
