--- a/css/components/ui/_title.scss
+++ b/css/components/ui/_title.scss
@@ -4,7 +4,7 @@
   line-height: 1.25;
 
   &.-proximanova {
-    font-family: $font-family-proximanova;
+    font-family: $font-family-1;
   }
 
   // Font sizes
