--- a/css/_base.scss
+++ b/css/_base.scss
@@ -5,8 +5,8 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: $font-family-georgia;
-  background: $color-tertiary;
+  font-family: $font-family-2;
+  background: $color-bg-dark;
   color: $color-text-1;
   font-size: $font-size-default;
   font-weight: 400;
