--- a/css/components/ui/_panel-item.scss
+++ b/css/components/ui/_panel-item.scss
@@ -1,7 +1,7 @@
 
 .c-panel-item {
   width: 100%;
-  box-shadow: 0px 0px 0.5px rgba($color-black, .3);
+  border: 1px solid $color-border-1;
   padding: 10px;
 
   &.-link {
