Header filters styles

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -10,6 +10,10 @@
   @include flex-grid-row(nest, expand, null, false, $grid-column-gutter);
 }
 
+.row {
+  width: 100%;
+}
+
 .l-page {
   display: flex;
   flex-direction: column;
