--- a/css/components/ui/_icon.scss
+++ b/css/components/ui/_icon.scss
@@ -13,12 +13,22 @@
     height: 10px;
   }
 
+  &.-small {
+    width: 14px;
+    height: 14px;
+  }
+
   &.-medium {
+    width: 18px;
+    height: 18px;
+  }
+
+  &.-big {
     width: 24px;
     height: 24px;
   }
 
-  &.-big {
+  &.-bigger {
     width: 32px;
     height: 32px;
   }
