--- a/css/components/ui/_filters.scss
+++ b/css/components/ui/_filters.scss
@@ -1,4 +1,11 @@
 
 .c-filters {
+  display: flex;
   padding: 20px;
+  width: 100%;
+
+  .c-select {
+    flex-grow: 1;
+    margin-right: 15px;
+  }
 }
