--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -104,6 +104,8 @@ $menu-container-width: 220px;
       justify-content: center;
       padding: 10px 25px;
       border-bottom: 1px solid rgba($color-border-3, .2);
+
+      .c-icon { fill: $color-text-1; }
     }
 
     .menu-main {
