toggle dashboard layout

--- a/css/components/ui/_filters.scss
+++ b/css/components/ui/_filters.scss
@@ -8,4 +8,20 @@
     flex-grow: 1;
     margin-right: 15px;
   }
+
+  .btn-grid,
+  .btn-list {
+    display: flex;
+    align-items: center;
+
+    &.-active {
+      .c-icon {
+        fill: $color-primary;
+      }
+    }
+
+    .c-icon {
+      fill: $color-secondary;
+    }
+  }
 }
