--- a/css/components/ui/_icon.scss
+++ b/css/components/ui/_icon.scss
@@ -23,6 +23,11 @@
     height: 18px;
   }
 
+  &.-normal {
+    width: 21px;
+    height: 21px;
+  }
+
   &.-big {
     width: 24px;
     height: 24px;
