--- a/css/_base.scss
+++ b/css/_base.scss
@@ -31,6 +31,7 @@ a {
 button {
   background: 0;
   border: 0;
+  font-family: $font-family-1;
   cursor: pointer;
 
   &:focus { outline: none; }
@@ -43,4 +44,12 @@ ul {
 
 li {
   list-style: none;
+}
+
+/* Titles */
+
+h1 {
+  font-size: $font-size-bigger;
+  line-height: 29px;
+  padding-bottom: 4px;
 }
