--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -3,6 +3,8 @@ $menu-container-width: 220px;
 .c-header {
   display: flex;
   justify-content: space-between;
+  padding: 0 30px;
+  border-bottom: 1px solid $color-border-1;
 
   .header-content {
     display: flex;
@@ -18,6 +20,7 @@ $menu-container-width: 220px;
       display: flex;
       align-items: center;
       margin-right: 22px;
+      padding: 0;
 
       .c-icon {
         fill: $color-primary;
