--- a/css/components/ui/_select.scss
+++ b/css/components/ui/_select.scss
@@ -22,6 +22,7 @@
   }
 
   .Select-control {
+    display: flex;
     background-color: transparent;
     border: 0;
     border-radius: 0;
@@ -41,7 +42,11 @@
     }
 
     .Select-arrow-zone {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 0;
+      width: 16px !important;
     }
 
     .Select-arrow {
@@ -51,19 +56,20 @@
       width: 6px;
       height: 6px;
       transform: rotate(45deg);
-      margin-right: -9px;
     }
 
     .Select-placeholder {
-      color: $color-text-1;
+      position: relative;
+      color: rgba($color-text-1, .5);
       text-transform: uppercase;
       font-family: $font-family-1;
-      padding-left: 0;
-      padding-top: 4px;
+      padding: 2px 0 0;
     }
   }
 
   .Select-multi-value-wrapper {
+    display: flex !important;
+
     .Select-value {
       background-color: transparent;
       border-color: rgba($color-text-1, .3);
