--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -6,8 +6,10 @@ $menu-container-width: 220px;
   padding: 0 30px;
   border-bottom: 1px solid $color-border-1;
 
-  .header-content {
+  .header-container {
     display: flex;
+    flex-flow: row wrap;
+    padding: 22px 0;
   }
 
   .header-title {
@@ -28,11 +30,10 @@ $menu-container-width: 220px;
     }
   }
 
-  .header-main {
+  .header-content {
     display: flex;
     align-items: center;
     flex-grow: 1;
-    width: 100%;
     height: 100%;
 
     .c-filters {
@@ -124,6 +125,10 @@ $menu-container-width: 220px;
       justify-content: center;
       width: 100%;
 
+      &.-active {
+        background-color: $color-primary;
+      }
+
       a {
         padding: 15px 25px;
         width: 100%;
@@ -134,7 +139,6 @@ $menu-container-width: 220px;
         text-transform: uppercase;
 
         &:hover {
-          background: rgba($color-primary, .5);
           opacity: .7;
         }
       }
