Compare toolbar component & styles

--- a/css/index.scss
+++ b/css/index.scss
@@ -35,6 +35,7 @@
 @import 'components/ui/accordion';
 @import 'components/ui/button';
 @import 'components/ui/collapsible-list';
+@import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
 @import 'components/ui/icon';
 @import 'components/ui/modal';
