--- a/css/components/ui/_modal.scss
+++ b/css/components/ui/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba($color-primary, .9);
+  background: rgba($color-bg-dark, .7);
   transition: all $animation-time $ease-in-sine;
   z-index: 1000; // Just to be sure that is over all the content
   visibility: visible;
@@ -30,7 +30,7 @@
     position: relative;
     width: calc(100% - 50px);
     max-width: 700px;
-    background: white;
+    background: $color-bg-dark;
     box-shadow: 0 1px 1px rgba($color-black, 0.15);
     z-index: 1;
   }
@@ -46,22 +46,27 @@
   }
 
   .modal-close {
-    fill: $color-white;
+    fill: $color-primary;
     background: none;
     border: none;
     outline: none;
     display: block;
     position: absolute;
-    bottom: 100%;
-    right: 0;
+    bottom: calc(100% - 20px);
+    right: -20px;
     width: 40px;
     height: 40px;
     padding: 0;
+    background-color: $color-bg-dark;
+    border: 1px solid $color-border-1;
+    border-radius: 100px;
+    box-shadow: 0 0 10px 0 rgba($color-black, .2);
+
     cursor: pointer;
     z-index: 2; /* Otherwise, it won't be reachable */
 
     &:hover {
-      fill: $color-error;
+      fill: $color-primary;
     }
   }
 
