--- a/css/components/ui/_switch.scss
+++ b/css/components/ui/_switch.scss
@@ -2,17 +2,17 @@
   margin-left: 12px;
   width: 26px;
   height: 14px;
-  background-color: rgba($color-black, .2);
+  background-color: $color-secondary;
 
   &.switch {
     border: 0;
+    background-color: $color-secondary;
 
     &.on {
-      background-color: rgba($color-black, .2);
+      background-color: $color-primary;
 
       & .switch-toggle {
         left: 13px;
-        background-color: $secondary-color;
       }
     }
   }
@@ -24,6 +24,6 @@
     left: 1px;
     border: 0;
     box-shadow: none;
-    background-color: rgba($color-white, .9);
+    background-color: $color-dark;
   }
 }
