--- a/css/components/map/_map.scss
+++ b/css/components/map/_map.scss
@@ -2,7 +2,8 @@
 .c-map {
   position: relative;
   width: 100%;
-  height: 350px;
+  height: 240px;
+  transition: all $animation-time-2 $ease-out-sine;
 
   .map-leaflet {
     width: 100%;
