Set map expansion from url

--- a/css/components/map/_area-map.scss
+++ b/css/components/map/_area-map.scss
@@ -2,7 +2,7 @@
 .c-area-map {
   &.-expanded {
     .c-map {
-      height: 380px;
+      height: 65vh;
       transition: all $animation-time-2 $ease-out-sine;
     }
   }
