Add zoom controls

--- a/css/index.scss
+++ b/css/index.scss
@@ -47,3 +47,4 @@
 @import 'components/ui/switch';
 @import 'components/ui/title';
 @import 'components/ui/select';
+@import 'components/ui/zoom-control';
