Change accordion behavior

--- a/css/index.scss
+++ b/css/index.scss
@@ -35,6 +35,7 @@
 @import '../node_modules/react-select/dist/react-select';
 @import '../node_modules/react-toggle-switch/dist/css/switch.min';
 @import 'components/ui/accordion';
+@import 'components/ui/area-indicators';
 @import 'components/ui/button';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/filters';
