--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -4,10 +4,10 @@
   flex-flow: column;
   width: 100%;
   max-height: 165px;
-  background-color: $color-white;
   padding-bottom: 15px;
   z-index: 1001;
-  background-color: $color-secondary;
+  background-color: $color-bg-dark;
+  border-bottom: 1px solid $color-border-1;
 
   &.-hidden {
     height: auto;
