--- a/css/components/ui/_accordion.scss
+++ b/css/components/ui/_accordion.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   flex-flow: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
 
   .accordion-section {
     &.-dynamic{
@@ -35,8 +35,8 @@
     transition: all .3s ease;
 
 
-    &.-hidden {
-      width: 30px;
+    &.-collapsed {
+      width: 60px;
       flex-grow: 0;
 
       * {
