--- a/css/index.scss
+++ b/css/index.scss
@@ -44,9 +44,11 @@
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
+@import 'components/ui/select';
+@import 'components/ui/select-slider';
 @import 'components/ui/sidebar';
 @import 'components/ui/spinner';
 @import 'components/ui/switch';
 @import 'components/ui/title';
-@import 'components/ui/select';
+@import 'components/ui/tooltip';
 @import 'components/ui/zoom-control';
