--- a/css/index.scss
+++ b/css/index.scss
@@ -45,6 +45,8 @@
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
 @import 'components/ui/select';
+@import 'components/ui/select-custom';
+@import 'components/ui/select-list';
 @import 'components/ui/select-slider';
 @import 'components/ui/sidebar';
 @import 'components/ui/spinner';
