--- a/css/index.scss
+++ b/css/index.scss
@@ -37,6 +37,7 @@
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
+@import 'components/ui/checkbox';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
