Close select tooltip when clicking outside

--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -9,6 +9,7 @@ $menu-container-width: 220px;
   .header-container {
     display: flex;
     flex-flow: row wrap;
+    align-items: center;
     padding: 22px 0;
   }
 
