--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-flow: column;
   width: 100%;
-  max-height: 165px;
+  max-height: 260px;
   padding-bottom: 15px;
   z-index: 1001;
   background-color: $color-bg-dark;
@@ -63,9 +63,21 @@
     transition: all .2s ease-out;
     overflow-y: auto;
 
+    .legend-list {
+      margin: 0;
+    }
+
     .legend-item {
       padding: 10px 0;
       border-bottom: 1px solid rgba($color-black, .2);
+
+      &:nth-child(odd) {
+        padding-right: 25px;
+      }
+
+      &:nth-child(even) {
+        padding-left: 25px;
+      }
 
       &:last-child {
         padding-bottom: 0;
@@ -122,6 +134,9 @@
       }
 
       .item-tools {
+        display: flex;
+        align-items: center;
+
         .handler {
           cursor: -webkit-grab;
         }
