--- a/css/components/ui/_select-custom.scss
+++ b/css/components/ui/_select-custom.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   padding-right: 20px;
 
-  .btn-tooltip {
+  .btn-dropdown {
     display: flex;
     align-items: center;
     justify-content: space-between;
