--- a/css/components/ui/_tooltip.scss
+++ b/css/components/ui/_tooltip.scss
@@ -1,24 +1,21 @@
 
 .c-tooltip {
-  padding: 10px;
-  background-color: $color-white;
-  color: $color-text-2;
+  position: absolute;
+  display: none;
+  bottom: calc(100% + 15px);
+  left: 3px;
+  padding: 8px;
+  background-color: $color-secondary;
+  color: $color-text-1;
 
-  &.-arrow-top {
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 50%;
-      width: 12px;
-      height: 12px;
-      transform: rotate(45deg) translateX(-50%);
-      background-color: $color-white;
-    }
-  }
-
-  .tooltip-container {
-    overflow: auto;
-    max-height: 150px;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    border: 4px solid transparent;
+    border-left: 4px solid $color-secondary;
+    border-top: 4px solid $color-secondary;
+    z-index: 3;
   }
 }
