--- a/css/index.scss
+++ b/css/index.scss
@@ -38,6 +38,7 @@
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
 @import 'components/ui/checkbox';
+@import 'components/ui/dropdown';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
