--- a/css/components/ui/_spinner.scss
+++ b/css/components/ui/_spinner.scss
@@ -7,7 +7,7 @@ $spinner-tiny-size: 20px;
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba($color-white, .75);
+  background: rgba($color-bg-dark, .75);
   visibility: hidden;
   opacity: 0;
   z-index: 1000;
