--- a/css/components/ui/_tooltip.scss
+++ b/css/components/ui/_tooltip.scss
@@ -2,8 +2,8 @@
 .c-tooltip {
   position: absolute;
   display: none;
-  bottom: calc(100% + 15px);
-  left: 3px;
+  bottom: calc(100% + 10px);
+  left: 0;
   padding: 8px;
   background-color: $color-secondary;
   color: $color-text-1;
