--- a/css/index.scss
+++ b/css/index.scss
@@ -44,6 +44,7 @@
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
 @import 'components/ui/icon';
+@import 'components/ui/item-tools';
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
