--- a/css/components/ui/_accordion.scss
+++ b/css/components/ui/_accordion.scss
@@ -7,7 +7,8 @@
 
   .accordion-section {
     &.-dynamic{
-      span {
+      /* Library span without class */
+      > span {
         display: flex;
         justify-content: flex-end;
       }
