--- a/css/index.scss
+++ b/css/index.scss
@@ -41,6 +41,7 @@
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
+@import 'components/ui/filters-selected-bar';
 @import 'components/ui/icon';
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
