--- a/css/index.scss
+++ b/css/index.scss
@@ -28,8 +28,13 @@
 @import 'components/map/legend';
 @import 'components/map/map-controls';
 
-// modal contents
+// - modal contents
 @import 'components/modal-contents/indicators-list';
+@import 'components/modal-contents/login';
+
+// - form
+@import 'components/form/field';
+@import 'components/form/checkbox';
 
 // - ui
 @import '../node_modules/react-select/dist/react-select';
@@ -37,7 +42,6 @@
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
-@import 'components/ui/checkbox';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
