--- a/css/components/modal-contents/_login.scss
+++ b/css/components/modal-contents/_login.scss
@@ -47,7 +47,7 @@
       }
     }
 
-    .forgot {
+    .btn-reset-password {
       color: $color-primary;
       font-weight: $font-weight-default;
     }
@@ -59,6 +59,11 @@
     .btn-login {
       width: 100%;
       margin-top: 72px;
+    }
+
+    .btn-reset {
+      width: 100%;
+      margin-top: 40px;
     }
   }
 }
