--- a/css/index.scss
+++ b/css/index.scss
@@ -19,6 +19,7 @@
 // Components
 // - layout
 @import 'components/layout/header';
+@import 'components/layout/header-login';
 @import 'components/layout/footer';
 
 // - map
