--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -154,5 +154,21 @@ $menu-container-width: 220px;
         }
       }
     }
+
+    .menu-tools {
+      padding: 20px 0;
+      margin-top: 15px;
+      border-top: 1px solid rgba($color-border-3, .2);
+
+      button {
+        padding: 0;
+        width: 100%;
+        padding: 15px 25px;
+        color: $color-text-1;
+        line-height: 18px;
+        text-align: center;
+        text-transform: uppercase;
+      }
+    }
   }
 }
