Line chart with possible multiple lines

--- a/css/index.scss
+++ b/css/index.scss
@@ -39,6 +39,7 @@
 
 // - charts
 @import 'components/charts/pie-type';
+@import 'components/charts/line-type';
 
 // - ui
 @import '../node_modules/react-select/dist/react-select';
