--- a/css/index.scss
+++ b/css/index.scss
@@ -40,6 +40,7 @@
 // - charts
 @import 'components/charts/pie-type';
 @import 'components/charts/line-type';
+@import 'components/charts/bars-type';
 @import 'components/charts/tooltip-chart';
 
 // - ui
