Add threshold qualification to dashboard item

--- a/css/index.scss
+++ b/css/index.scss
@@ -41,6 +41,7 @@
 @import 'components/charts/pie-type';
 @import 'components/charts/line-type';
 @import 'components/charts/bars-type';
+@import 'components/charts/bars-line-type';
 @import 'components/charts/tooltip-chart';
 
 // - ui
