--- a/css/settings.scss
+++ b/css/settings.scss
@@ -26,7 +26,9 @@ $color-tertiary: $color-light-green;
 
 // Threshold
 $color-threshold-success: $color-light-green;
+$color-threshold-good: #C9FF9A;
 $color-threshold-medium: $color-peach;
+$color-threshold-weak: #FF6169;
 $color-threshold-fail: $color-watermelon;
 
 // Text
