--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -33,6 +33,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    max-height: 280px;
+    overflow-y: auto;
   }
 
   /* Footer */
