--- a/css/index.scss
+++ b/css/index.scss
@@ -44,6 +44,7 @@
 @import 'components/charts/bars-type';
 @import 'components/charts/bars-line-type';
 @import 'components/charts/table-type';
+@import 'components/charts/trend-type';
 
 // - ui
 @import '../node_modules/react-select/dist/react-select';
