--- a/css/components/charts/_tooltip-chart.scss
+++ b/css/components/charts/_tooltip-chart.scss
@@ -11,15 +11,16 @@
   box-shadow: 0 0 6px 0 rgba($color-black, .19);
 
   .title {
-    line-height: 24px;
+    font-size: $font-size-small;
+    line-height: 20px;
     text-align: center;
     font-weight: $font-weight-light;
     margin-bottom: 3px;
   }
 
   .value {
-    font-size: $font-size-bigger;
-    line-height: 24px;
+    font-size: $font-size-big;
+    line-height: 22px;
     text-align: center;
   }
 }
