--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -28,7 +28,7 @@
   .legend-header {
     display: flex;
     justify-content: space-between;
-    padding: 0 15px;
+    padding: 0 50px;
     color: $color-text-1;
     font-size: 16px;
     line-height: 16px;
@@ -36,6 +36,8 @@
 
     .title {
       padding: 10px 0;
+
+      .btn { padding: 0; }
     }
 
     .tools {
@@ -91,7 +93,7 @@
     height: auto;
     max-height: 200px;
     justify-content: space-between;
-    padding: 0;
+    padding: 0 30px;
     transition: all .2s ease-out;
     overflow-y: auto;
     box-shadow: inset 0 0 5px 0 rgba($color-black, .2);
