--- a/css/components/ui/_area-indicators.scss
+++ b/css/components/ui/_area-indicators.scss
@@ -9,7 +9,7 @@
     align-items: center;
     width: 100%;
     height: 36px;
-    padding: 0 30px;
+    padding: 0 0 0 30px;
     background-color: rgba($color-secondary, .4);
     border-bottom: 1px solid $color-border-1;
 
